--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "Enabled",
     "files.associations": {
-        "errno.h": "c"
+        "errno.h": "c",
+        "error.h": "c"
     }
 }
