--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "Enabled",
     "files.associations": {
         "errno.h": "c",
-        "error.h": "c"
+        "error.h": "c",
+        "stdlib.h": "c"
     }
 }
